--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,3 @@
-DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
-SOURCE_DIR="${DIR}/../app"
-
 steps:
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   args:
@@ -8,5 +5,5 @@ steps:
   - functions
   - deploy
   - testPipeline
-  - --source=${SOURCE_DIR}
+  - --source=../app
   - --trigger-http
