--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,3 @@
 steps:
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  args:
-  - gcloud
-  - functions
-  - deploy
-  - testPipeline
-  - --source=.
-  - --runtime=python37
-  - --trigger-http
+  args: ["deploy"]
