--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,10 @@
 steps:
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  args: ["./deploy-test.yaml"]
+  args: 
+  - gcloud
+  - functions
+  - deploy
+  - hello_world
+  - --region=us-west2
+  - --source=.
+  - --trigger-http
